m/k/k3d-dfd-emojivoto/resource-ingress-emojivoto.yaml
#ManagedBy: cue

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emojivoto
  annotations:
    external-dns.alpha.kubernetes.io/hostname: emojivoto.dev.amanibhavam.defn.run
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: emojivoto.dev.amanibhavam.defn.run
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emojivoto
                port:
                  number: 80
